--- a/tests/output/app/gfm-test-user-content.html
+++ b/tests/output/app/gfm-test-user-content.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-color-mode=light data-light-theme=light data-dark-theme=dark>
+<html lang="en" data-color-mode=auto data-light-theme=light data-dark-theme=dark>
 <head>
   <meta charset="utf-8" />
   <title>README.md - Grip</title>
